[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-context"
version = "0.1.0"
description = "Extract structured context from GitHub repositories for AI codebase integration"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["github", "cli", "context", "ai", "codebase"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "gitpython>=3.1.0",
    "click>=8.0.0",
    "tqdm>=4.65.0",
    "colorama>=0.4.6",
]

[project.scripts]
agent-context = "agent_context.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/agent-context"
Repository = "https://github.com/yourusername/agent-context"
Issues = "https://github.com/yourusername/agent-context/issues"

[tool.setuptools]
packages = ["agent_context"]

[tool.setuptools.package-data]
"*" = ["*.txt", "*.md"]
